; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-xway.c_xway_gpio_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-xway.c_xway_gpio_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.ltq_pinmux_info = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_chip*, i32)* @xway_gpio_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xway_gpio_get(%struct.gpio_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_chip*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ltq_pinmux_info*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.gpio_chip*, %struct.gpio_chip** %3, align 8
  %7 = getelementptr inbounds %struct.gpio_chip, %struct.gpio_chip* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.ltq_pinmux_info* @dev_get_drvdata(i32 %8)
  store %struct.ltq_pinmux_info* %9, %struct.ltq_pinmux_info** %5, align 8
  %10 = load %struct.ltq_pinmux_info*, %struct.ltq_pinmux_info** %5, align 8
  %11 = getelementptr inbounds %struct.ltq_pinmux_info, %struct.ltq_pinmux_info* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @GPIO_IN(i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @PORT_PIN(i32 %17)
  %19 = call i32 @gpio_getbit(i32 %14, i32 %16, i32 %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local %struct.ltq_pinmux_info* @dev_get_drvdata(i32) #1

declare dso_local i32 @gpio_getbit(i32, i32, i32) #1

declare dso_local i32 @GPIO_IN(i32) #1

declare dso_local i32 @PORT_PIN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
